python3.2 (3.2.2-1+lucid1) lucid; urgency=low

  * New version numbering scheme.
  * Use /usr/include/ncursesw for _curses and _curses_panel modules.

 -- Felix Krull <f_krull@gmx.de>  Sat, 28 Jan 2012 22:35:23 +0100

python3.2 (3.2.2-0~ppa1~lucid1) lucid; urgency=low

  * Imported new upstream version Python 3.2.2.

 -- Felix Krull <f_krull@gmx.de>  Wed, 21 Sep 2011 23:37:10 +0200

python3.2 (3.2.1-0~ppa1~lucid1) lucid; urgency=low

  * Imported new upstream version 3.2.1.
  * Added `profile` and `pstats` modules to the package.
    - These were missing from earlier packages due to a restrictive
      license. They were relicensed under the Apache License 2.0.
    - Also have python3.2 provide python3.2-profiler.
  * Removed Provides for python3.2-gdbm from python3.2 package.

 -- Felix Krull <f_krull@gmx.de>  Wed, 03 Aug 2011 14:26:23 +0200

python3.2 (3.2-2~ppa1~lucid1) lucid; urgency=low

  * Import from Debian Unstable.
  * Re-enabled Tk and GDBM builds.

 -- Felix Krull <f_krull@gmx.de>  Sat, 30 Apr 2011 23:07:43 +0200

python3.2 (3.2-2) unstable; urgency=low

  * Update to 20110419 from the 3.2 branch.
  * Re-enable profile-guided builds.
  * Build without OpenSSL v2 support. Closes: #622004.
  * Force linking the curses module against libncursesw. Closes: #622064.
  * Re-enable running the testsuite during the build.

 -- Matthias Klose <doko@debian.org>  Tue, 19 Apr 2011 17:54:36 +0200

python3.2 (3.2-1) unstable; urgency=low

  * Python 3.2 final release.

 -- Matthias Klose <doko@debian.org>  Sun, 20 Feb 2011 19:22:24 +0100

python3.2 (3.2~rc3-1) experimental; urgency=low

  * Python 3.2 release candidate 3.

 -- Matthias Klose <doko@debian.org>  Mon, 14 Feb 2011 16:12:14 +0100

python3.2 (3.2~rc1-2) experimental; urgency=low

  * Fix upgrade of the python3.2-dev package. Closes: #610370.

 -- Matthias Klose <doko@debian.org>  Wed, 19 Jan 2011 02:21:19 +0100

python3.2 (3.2~rc1-1) experimental; urgency=low

  * Python 3.2 release candidate 1.
