@@ -2,8 +2,9 @@ python3.2 (3.2.2-1+lucid1) lucid; urgency=low
 
   * New version numbering scheme.
   * Use /usr/include/ncursesw for _curses and _curses_panel modules.
+  * Add python3.2-complete metapackage.
 
- -- Felix Krull <f_krull@gmx.de>  Sat, 28 Jan 2012 22:35:23 +0100
+ -- Felix Krull <f_krull@gmx.de>  Sat, 28 Jan 2012 22:45:24 +0100
 
 python3.2 (3.2.2-0~ppa1~lucid1) lucid; urgency=low
 
